--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -91,7 +91,7 @@
     background-size: cover;
     background-color:rgba(255,255,255,0.8);
     background-blend-mode:lighten;
-    height: 100%;
+    flex: 1 1 100%;
   }
 }
 
@@ -147,4 +147,10 @@ h2 {
   &-btn{
     background-color: #68ccf9;
   }
+}
+
+#wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
