--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -11,7 +11,7 @@
   padding-bottom: 20px;
 }
 
-.win-school,.lose-school{
+.win-school_fcs,.lose-school_fcs{
   margin-top: 20px;
   font-size: 25px;
 }
