--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -9,12 +9,12 @@
   <%= link_to forecast do %>
   <div class="content-fcs">
     <div class="school-fcs">
-      <div class="win-school">
+      <div class="win-school_fs">
         <p>勝利予想<p>
         <br>
         <%= forecast.win_school.name %>
       </div>
-      <div class="lose-school">
+      <div class="lose-school_fs">
         <p>敗退予想<p>
         <br>
         <%= forecast.lose_school.name %>
