tweets 投稿フォーム　間隔

--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -1,3 +1,6 @@
+<div class="mt-4">
+  <%= link_to "戻る",forecasts_path,class: "return-top"%>
+</div>
 <div class="contents row">
   <div class="form">
     <%= form_with model: @forecast,local: true do |f| %>
