--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -4,6 +4,7 @@
   margin-top: 0;
   margin-bottom: 0;
   max-width: 760px;
+  box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
 }
 
 .contents{
@@ -20,7 +21,6 @@ h3{
 }
 
 .container{
-  margin: 20px 0;
   padding: 30px;
   box-shadow: 0 0 10px rgba(41,41,41,0.2);
 }
