--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,8 +1,8 @@
 <div class="mt-4">
-  <%= link_to "戻る",forecasts_path,class: "return-top"%>
+  <%= link_to "戻る",tweets_path,class: "return-top"%>
 </div>
 <div class="contents row">
-  <div class="containe_r">
+  <div class="containe_r p-4">
     <%= form_with model: @tweet, local: true do |f| %>
       大会選択<br>
       <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]},selected: @tweet.tournament_id),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category"} %>
