--- a/app/views/contacts/done.html.erb
+++ b/app/views/contacts/done.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h2>メッセージ送信完了</h2>
-  <p>
-    メッセージをいただきありがとうございました。
-  </p>
-  <%= link_to "戻る",root_path %>
+  <div class="contact-end text-center mt-5">
+    <p>メッセージをいただきありがとうございました</p>
+  </div>
+  <%= link_to "戻る",root_path class: "return-top mt-4" %>
 </div>
