ヘッダー　修正

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -40,7 +40,7 @@
   justify-content: space-between;
 }
 
-.info,.mypage,.logout,.login,.top_sign_up {
+.info,.mypage,.logout,.contact-header,.login,.top_sign_up {
   color: rgba(29,161,242,1.00);;
 }
 
