お問い合わせフォーム

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,9 +1,14 @@
 .contact {
-  width: 45%;
-  margin: 0 auto;
+  background-color: #EEEEEE;
+  &-main{
+    width: 45%;
+    margin: 0 auto;
+    flex: 1 1 100%;
+  }
   &-sent {
     width: 20%;
     margin: 0 auto;
   }
 }
+
 
