--- a/app/views/contacts/check.html.erb
+++ b/app/views/contacts/check.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @contact, url: done_contacts_path do |f| %>
-  <div class="contact text-center pt-2">
+  <div class="contact-main text-center pt-2">
     <h2>内容確認</h2>
     <div class="contact-check">
       <div class="contact-name mt-5">
