問い合わせ確認

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
  @import "./room";
  @import "./show";
  @import "./top";
- @import "./contact"
+ @import "./contact";
+ @import "./notification"
 
 
