--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -27,7 +27,7 @@
         <p><%= f.text_area :content, placeholder: '1000文字以内' %></p>
       </div>
       <div class="contact-sent mt-5">
-        <%= f.submit "確認画面へ" %>
+        <%= f.submit "確認画面へ",class: "btn btn-warning" %>
         <%= link_to root_path,class: "btn btn-primary active" do %>
         戻る
         <% end %>
