--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -149,7 +149,7 @@ h2 {
   }
 }
 
-#wrapper,.contact {
+#wrapper,.contact,.notification-main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
