--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,9 +1,11 @@
 <h3 class="text-center">通知</h3>
     <hr>
 <% if @notifications.exists? %>
+  <div class="notification-main">
     <div class="users-index">
         <%= render @notifications %>
     </div>
+  </div>
 <% else %>
     <p>通知はありません</p>
 <% end %>
