分析　期待度追加

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -38,7 +38,7 @@
   font-weight: bold;
 }
 
-.attack_i,.defensive_i,.pitcher_i,.comprehensive_i {
+.attack_i,.defensive_i,.pitcher_i,.comprehensive_i,.expectations_i {
   font-size: 20px;
 }
 
