--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -31,6 +31,10 @@
         <p>総合力</p>
         <%= analysis.comprehensive%>
       </div>
+      <div class="expectations_i">
+        <p>期待度</p>
+        <%= analysis.expectations%>
+      </div>
     </div>
     <div class="name_ays">
       <span>投稿者</span>
