--- a/app/views/analyses/_analysis.html.erb
+++ b/app/views/analyses/_analysis.html.erb
@@ -16,6 +16,10 @@
     <p>総合力</p>
     <%= f.select :comprehensive,[["1",1],["2",2],["3",3],["4",4],["5",5]],include_blank: "選択してください"%>
   </div>
+  <div class="expectations">
+    <p>期待度</p>
+    <%= f.select :expectations,[["1",1],["2",2],["3",3],["4",4],["5",5]],include_blank: "選択してください"%>
+  </div>
 </div>
 <%= f.text_area :text, cols: 30 ,rows: 10,placeholder: "分析内容を入力してください",value: "#{@analysis.text}" %>
 <%= f.submit value: "SENT",class: "game_record"%>
