--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -1,4 +1,5 @@
 <div class="analysis-show_content">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   <div class="choose-btn">
     <% if current_user.id == @analysis.user_id || current_user.admin? %>
     <%= link_to "記事を削除する","/analyses/#{@analysis.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
@@ -33,16 +34,16 @@
       </div>
       <div class="comprehensive_i">
         <p>総合力</p>
-        <% if @analysis.comprehensive=="A" %>
-          <%= @analysis.comprehensive%>
-        <% elsif @analysis.comprehensive=="B" %>
-          <p>B+<p>
-        <% elsif @analysis.comprehensive=="C" %>
-          <p>B<p>
-        <% else %>
-          <p>C<p>
-        <% end %>
+        <%= @analysis.comprehensive%>
       </div>
+      <div class="expectations_i">
+        <p>期待度</p>
+        <%= @analysis.expectations%>
+      </div>
+    </div>
+    <div style="width:900px; height:500px;" >
+      <canvas id="RaderChart"></canvas>
+      <%= render partial: "chart"%>
     </div>
   </div>
   <div class="show-text">
