分析ページ　調整

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
  @import "./show";
  @import "./top";
  @import "./contact";
- @import "./notification"
+ @import "./notification";
+ @import "./tournament"
 
 
