--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -14,7 +14,7 @@
     <div class="content_anali-image mt-4">
       <i class="fas fa-search"></i>
     </div>
-    <div class="select_main">
+    <div class="select_main text-center">
       <div class="attack_i">
         <p>攻撃力</p>
         <%= analysis.attack%>
