--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -20,15 +20,15 @@
       <%= @analysis.school.name %>
     </div>
     <div class="select_main-show">    
-      <p>攻撃力</p>
+      <p class="font">攻撃力</p>
       <div class="attack_i"><%= @analysis.attack%></div>
-      <p>守備力</p>
+      <p class="font">守備力</p>
       <div class="defensive_i"><%= @analysis.defensive%></div>
-      <p>投手力</p>
+      <p class="font">投手力</p>
       <div class="pitcher_i"><%= @analysis.pitcher%></div>
-      <p>総合力</p>
+      <p class="font">総合力</p>
       <div class="comprehensive_i"><%= @analysis.comprehensive%></div>
-      <p>期待度</p>
+      <p class="font">期待度</p>
       <div class="expectations_i"><%= @analysis.expectations%></div>
     </div>
     <div style="width:900px; height:500px;" >
@@ -65,7 +65,6 @@
       <% end %>
     </div>
     <div class="comment-form"> 
-    <!-- ここからフォーム -->
     <% if current_user %>
       <%= form_with(model:[@analysis, @comment], method: :post) do |f| %>
         <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
