--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -9,10 +9,14 @@
     <%end%>
   </div>
   <div class="forecasts-main">
-    <div class="text-format text-danger mt-1 pt-5 mb-4">
-      <%= @forecast.tournament.name%>
-    </div>
-    <%= render partial: "forecasts/forecasts"%>
+    <% if @forecast.present? %>
+      <div class="text-format text-danger mt-1 pt-5 mb-4">
+        <%= @forecast.tournament.name%>
+      </div>
+      <%= render partial: "forecasts/forecasts"%>
+    <% else %>
+      <p class="text-center mt-5">投稿はありません<p>
+    <% end %>
     <%= paginate(@forecasts)%>
   </div>
 </div>
