--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -9,10 +9,14 @@
     <%end%>
   </div>
   <div class="article-main">
-    <div class="text-format text-success mt-1 pt-5">
-      <%= @tweet.tournament.name%>
-    </div>
-    <%= render partial: "tweets/tweet_show"%>
+    <% if @tweet.present? %>
+      <div class="text-format text-success mt-1 pt-5">
+        <%= @tweet.tournament.name%>
+      </div>
+      <%= render partial: "tweets/tweet_show"%>
+    <% else %>
+      <p class="text-center mt-5">投稿はありません</p>
+    <% end %>
     <%= paginate(@tweets) %>
   </div>
 </div>
