ボタン配置

--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -18,3 +18,11 @@
 .avg-name {
   font-size: 25px;
 }
+
+.return {
+  border: 2px solid #57e963;
+  color: #57e963;
+  padding: 7px 30px;
+  margin-left:  30px;
+  display: inline-block;
+}
