--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="forecast-show_content">
-  <div class="choose-btn">
+  <div class="choose-btn pt-2">
     <% if current_user.id == @forecast.user_id || current_user.admin? %>
       <%= link_to "記事を削除する","/forecasts/#{@forecast.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
       <%= link_to "記事を編集する","/forecasts/#{@forecast.id}/edit",method: :get,class: "edit-article" %>
