--- a/app/views/tournaments/watch_avg.html.erb
+++ b/app/views/tournaments/watch_avg.html.erb
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+<%= link_to "戻る",watch_ays_tournament_path,class: "return"%>
 <% @avgs.each do |avg|%>
   <div class="avg-name text-center pt-5"><%=avg[:name]%></div>
   <div class="average">
@@ -18,4 +19,3 @@
   </div>
   <%= javascript_pack_tag 'tournament' %>
 <% end %>
-<%= link_to "戻る",watch_ays_tournament_path%>
