--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,5 @@
 <div class="game-article">
-  <div class="choose-btn">
+  <div class="choose-btn pt-2">
     <% if current_user.id == @tweet.user_id || current_user.admin? %>
     <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
     <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
