--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <%= link_to "戻る",forecasts_path,class: "return-top"%>
+  <%= link_to "戻る",forecasts_path,class: "return"%>
 </div>
 <div class="contents row">
   <div class="form p-4">
@@ -8,6 +8,9 @@
     <%=f.select :tournament_id, options_for_select( @category_parent_array.map{|c| [c[:name], c[:id]]},selected: @forecast.tournament_id),{include_blank:"大会を選択してください"}, { class: "parent_category_box", id: "parent_category_forecast"} %>
     <div class="win-school mt-3"></div>
     <div class="lose-school mt-3"></div>
+    <div class="win-rate mt-5">
+      <%= f.select :probability,[["60%",60],["70%",70],["80%",80],["90%",90],["100%",100]],include_blank: "勝利予想チームの勝率"%>
+    </div>
     <%= f.text_area :text,cols: 30,rows: 10,placeholder: "予想内容を入力してください",value: "#{@forecast.text}"%>
     <%=f.submit value: "SENT",class: "game_record"%>
     <% end %>
