予想　円グラフ

--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -34,3 +34,12 @@
   height: 100%;
   flex: 1 1 100%;
 }
+
+.win-rate {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.Pie {
+  margin-left: 18%;
+}
