グラフ　投稿画面

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -41,6 +41,10 @@
   font-size: 20px;
 }
 
+.attack,.defencive,.pitcher,.comprehensive,.expectations {
+  margin-right: 10px;
+}
+
 .font {
   margin-right: -80px;
   font-size: 20px;
