--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -9,7 +9,7 @@
     <div class="win-school mt-3"></div>
     <div class="lose-school mt-3"></div>
     <div class="win-rate mt-5">
-      <%= f.select :probability,[["60%",60],["70%",70],["80%",80],["90%",90],["100%",100]],include_blank: "勝利予想チームの勝率"%>
+      <%= f.select :probability,[["60%",60],["70%",70],["80%",80],["90%",90],["100%",100]],include_blank: "勝利予想チームの勝利確率"%>
     </div>
     <%= f.text_area :text,cols: 30,rows: 10,placeholder: "予想内容を入力してください",value: "#{@forecast.text}"%>
     <%=f.submit value: "SENT",class: "game_record"%>
