--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -23,13 +23,22 @@
           <% end %>
         </div>
         <div class="top-image_one">
-          <%= image_tag "defense.png",width: '400',height: '300' %>
+          <%= image_tag "run.png",width: '400',height: '300' %>
         </div>
         <div class="top-image_two">
-          <%= image_tag "s-20140422202730101600.png",width: '300',height: '300' %>
+          <%= image_tag "pitch1.png",width: '300',height: '300' %>
         </div>
         <div class="top-image_three">
-          <%= image_tag "04528d896c142111f9ad8f83522bb05d76dbf17a.png",width: '300',height: '300' %>
+          <%= image_tag "batter1.png",width: '300',height: '300' %>
+        </div>
+        <div class="top-image_four">
+          <%= image_tag "pitch2.png",width: '390',height: '390' %>
+        </div>
+        <div class="top-image_five">
+          <%= image_tag "batter2.png",width: '350',height: '350' %>
+        </div>
+        <div class="top-image_six">
+          <%= image_tag "defense.png",width: '280',height: '280' %>
         </div>
       </div>
     </div>
