--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -6,7 +6,7 @@
       <div class="top-container">
         <div class="mx-auto" style="width: 40%;">
         <div class="top-title font-weight-bold">
-          甲子園
+          高校野球コネクト
         </div>
           <li>
           <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
@@ -23,16 +23,16 @@
           <% end %>
         </div>
         <div class="top-image_one">
-          <%= image_tag "run.png",width: '400',height: '300' %>
+          <%= image_tag "run.png",width: '300',height: '300' %>
         </div>
         <div class="top-image_two">
-          <%= image_tag "pitch1.png",width: '300',height: '300' %>
+          <%= image_tag "pitch1.png",width: '220',height: '220' %>
         </div>
         <div class="top-image_three">
           <%= image_tag "batter1.png",width: '300',height: '300' %>
         </div>
         <div class="top-image_four">
-          <%= image_tag "pitch2.png",width: '390',height: '390' %>
+          <%= image_tag "pitch2.png",width: '470',height: '470' %>
         </div>
         <div class="top-image_five">
           <%= image_tag "batter2.png",width: '350',height: '350' %>
