--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -34,14 +34,16 @@
       <% if current_user.following?(@user) %>
       <div class="dm">
         <%= link_to 'ダイレクトメッセージをする', room_path(@roomId) %>
+      </div>
       <% end %>
     <% else %>
       <%= form_for @room do |f| %>
         <%= fields_for @entry do |e|%>
           <% e.hidden_field :user_id, value: @user.id %>
         <% end %>
-        <%= f.submit "DMを開始する"%>
-      </div>
+        <% if current_user.following?(@user) %>
+          <%= f.submit "DMを開始する"%>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
