--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -39,9 +39,9 @@
         <i class="fas fa-heart"></i><%= @tweet.likes.count %>
       <% end %>
     <% end %>
-    <h2>いいねをしたユーザー</h2>
+    <h2>いいねをしたユーザー</h2><br>
     <% @tweet.liked_users.each do |user|%>
-      <li><%=user.nickname%></li>
+      <%=user.nickname%><br>
     <% end %>
   </div>
   <div class="comment-content">
