画像　スライド

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -7,6 +7,10 @@
   flex: 1 1 100%;
 }
 
+.analysis_header {
+  background-image: url("https://pics.prcm.jp/d1c2e60537af9/78615919/jpeg/78615919.jpeg");
+}
+
 .content_anali {
   margin-top: 90px;
   background-color: lime;
