--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -9,12 +9,18 @@
 }
 
 .header {
-  background-image: url("81573810.jpeg");
-  line-height: 300px;
+  background-size: contain;
 }
 
-.analysis_header {
-  background-image: url("https://pics.prcm.jp/d1c2e60537af9/78615919/jpeg/78615919.jpeg");
+.slider-inner{
+  position: absolute;
+  width: 100%;
+  height: 300px;
+}
+.slide-img {
+  width: 100%;
+  height: 100%;
+  object-fit: hidden;
 }
 
 .images {
@@ -153,4 +159,11 @@ h2 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: all 1s ease;
+}
+.fade-enter, .fade-leave-to {
+  opacity: 0;
 }
