--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <%= link_to "戻る",tweets_path,class: "return-top"%>
+  <%= link_to "戻る",tweets_path,class: "return-top",data: {"turbolinks" => false} %>
 </div>
 <div class="contents row">
   <div class="containe_r p-4">
