--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "記事一覧へ戻る",tweets_path %>
+<%= link_to "記事一覧へ戻る",tweets_path,data: {"turbolinks" => false}  %>
 <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
   <%= form.submit "検索",class: "game_record" %>
