--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,6 +1,12 @@
 <%= render partial: "tweets/header" %>
-<div class="analysis_header">
-  <h1>戦力分析<h1>
+<div id="app">
+  <div class="header">
+    <transition name="fade">
+      <div class="slider-inner" :key="idx" v-for="(slide, idx) in slides" v-if="current_slide == idx">
+        <img class="slide-img" v-bind:src="slides[idx].img" :key="slides[idx].img">
+      </div>
+    </transition>
+  </div>
 </div>
 <div class="main-content pt-2">
   <div class="main-content-btn">
@@ -28,3 +34,4 @@
     <%= paginate(@analyses)%>
   </div>
 </div>
+<%= javascript_pack_tag 'tweet' %>
