--- a/app/views/analyses/new.html.erb
+++ b/app/views/analyses/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <%= link_to "戻る",analyses_path,class: "return-top"%>
+  <%= link_to "戻る",analyses_path,class: "return-top",data: {"turbolinks" => false} %>
 </div>
 <div class="contents row">
   <div class="container">
