--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -5,7 +5,7 @@
     <%= link_to "記事を削除する","/analyses/#{@analysis.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
     <%= link_to "記事を編集する","/analyses/#{@analysis.id}/edit",method: :get,class: "edit-article" %>
     <% end %>
-    <%= link_to "分析トップページへ戻る",analyses_path,class: "return-btn"%>
+    <%= link_to "分析トップページへ戻る",analyses_path,class: "return-btn",data: {"turbolinks" => false} %>
   </div>
   <div class="user_name">
     <h4>投稿者 <%= link_to "#{@analysis.user.nickname}","/mypages/#{@analysis.user_id}"%></h4>
