--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -14,11 +14,11 @@
           <% end %>
           </li>
           <li>
-          <%= link_to analyses_path,class: "btn btn-green-moon" do %>
+          <%= link_to analyses_path,class: "btn btn-green-moon",data: {"turbolinks" => false}  do %>
             <i class="fas fa-search"></i>戦力分析
           <% end %>
           </li>
-          <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
+          <%= link_to forecasts_path,class: "btn btn-orange-moon",data: {"turbolinks" => false}  do %>
             <i class="fas fa-baseball-ball"></i>試合予想
           <% end %>
         </div>
