--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -1,6 +1,12 @@
 <%= render partial: "tweets/header" %>
-<div class="analysis_header">
-  <h1>試合予想<h1>
+<div id="app">
+  <div class="header">
+    <transition name="fade">
+      <div class="slider-inner" :key="idx" v-for="(slide, idx) in slides" v-if="current_slide == idx">
+        <img class="slide-img" v-bind:src="slides[idx].img" :key="slides[idx].img">
+      </div>
+    </transition>
+  </div>
 </div>
 <div class="main-content">
   <div class="main-content-btn pt-2">
@@ -27,3 +33,4 @@
     <%= paginate(@forecasts)%>
   </div>
 </div>
+<%= javascript_pack_tag 'tweet' %>
