--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-4">
-  <%= link_to "戻る",forecasts_path,class: "return"%>
+  <%= link_to "戻る",forecasts_path,class: "return",data: {"turbolinks" => false} %>
 </div>
 <div class="contents row">
   <div class="form p-4">
