--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,7 +1,7 @@
 <div class="game-article">
   <div class="choose-btn pt-2">
     <% if current_user.id == @tweet.user_id || current_user.admin? %>
-    <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-article"%>
+    <%= link_to "記事を削除する","/tweets/#{@tweet.id}",method: :delete,data: { confirm: '削除しますか？' },class: "delete-btn"%>
     <%= link_to "記事を編集する","/tweets/#{@tweet.id}/edit",method: :get,class: "edit-article" %>
     <% end %>
     <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn",data: {"turbolinks" => false} %>
