--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -1,21 +1,30 @@
-<%= link_to "記事一覧へ戻る",tweets_path,data: {"turbolinks" => false}  %>
-<%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
+<%= link_to "記事一覧へ戻る",tweets_path,data: {"turbolinks" => false},class: "return-btn d-inline-block mt-2"  %>
+<%= form_with(url: search_tweets_path, local: true, method: :get, class: "search mt-5 mb-5") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
-  <%= form.submit "検索",class: "game_record" %>
+  <%= form.submit "検索", class: "search-btn" %>
 <% end %>
 <% @tweets.each do |tweet|%>
-<div class="comment">
-  <div class="comment-list">
-    <div class="title">
-    <%= link_to "#{tweet.school_a.name}vs#{tweet.school_b.name}","/tweets/#{tweet.id}",class: "title"%>
+  <%= link_to tweet do %>
+  <div class="article">
+    <div class="article-title">
+      <%= tweet.school_a.name %>
+      vs
+      <%= tweet.school_b.name %>
+    </div>
+    <div class="article-image">
+      <i class="fa fa-baseball-ball text-white"></i>
     </div>
     <div class="sub-title">
       <%= tweet.title_info %>
+    </div>
+    <div class="name">
+      <span>投稿者</span>
+      <%= tweet.user.nickname %>
     </div>
     <div class="tweets_at">
       <%= tweet.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
     </div>
   </div>
-</div>
-   <% end %>
+  <% end %>
+<% end %>
 </div>
