--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -49,7 +49,7 @@
         <% @comments.each do |comment| %>
           <p>
             <%= @num %>:
-            <strong><%= comment.user.nickname %></strong>
+            <strong><%= link_to "#{comment.user.nickname}","/mypages/#{comment.user.id}" %></strong>
               <div class="mt-3">
                 <%= simple_format(comment.text) %>
               </div>
