--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -35,13 +35,13 @@
         <i class="fas fa-heart"></i><%= @tweet.likes.count %>
       <% end %>
     <% else %>
-      <%= button_to tweet_likes_path(@tweet),{class: "good"} do %>
+      <%= button_to tweet_likes_path(@tweet),{class: "good mb-2"} do %>いいね
         <i class="fas fa-heart"></i><%= @tweet.likes.count %>
       <% end %>
     <% end %>
-    <h2>いいねをしたユーザー</h2><br>
+    <p>いいねをしたユーザー</p><br>
     <% @tweet.liked_users.each do |user|%>
-      <%=user.nickname%><br>
+      <%= link_to "#{user.nickname}","/mypages/#{user.id}" %><br>
     <% end %>
   </div>
   <div class="comment-content">
@@ -54,7 +54,7 @@
         <% @comments.each do |comment| %>
           <p>
             <%= @num %>:
-            <strong><%= comment.user.nickname %></strong>
+            <strong><%= link_to "#{comment.user.nickname}","/mypages/#{comment.user.id}" %></strong>
               <div class="mt-3">
                 <%= simple_format(comment.text) %>
               </div>
@@ -70,7 +70,6 @@
       <% end %>
     </div>
     <div class="comment-form"> 
-    <!-- ここからフォーム -->
     <% if current_user %>
       <%= form_with(model:[@tweet, @comment], method: :post) do |f| %>
         <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
